--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://moayad7.github.io/cars",
+  "homepage": "https://moayad7.github.io/syrian-cars",
   "private": true,
   "version": "0.0.0",
   "type": "module",
